# homekase

./: .gitignore  .shellcheckrc  DEV.md  Makefile  NOTES.md  README.md  REDESIGN.md  TODOs.md  TO_DISCUSS.md  homekase  install.sh  setup.sh
docs/: SERVICE_PATTERNS.md  TAILSCALE_CHEATSHEET.md
functions/: homekase.fish
lib/: adguard.sh  assistant.sh  backup.sh  beszel.sh  common.sh  common_wizard.sh  config.sh  disks.sh  docker.sh  github-runner.sh  immich.sh  init.sh  jellyfin.sh  network.sh  port.sh  qbittorrent.sh  services.sh  status.sh  syncthing.sh  system.sh  tailscale.sh  tools.sh  traefik.sh  users.sh  wizard.sh
scripts/: homekase-backup.sh
services/app/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
services/app/static/: manifest.json
services/app/templates/: _service_grid.html  index.html
services/assistant/agent/: Dockerfile  agent.py  config.yml  main.py  pyproject.toml  services.py  tool_registry.py
services/assistant/agent/tools/: __init__.py  fabric.py  fetch.py  news.py  system.py  weather.py  web_search.py
templates/: homekase.yml.template
tests/: Dockerfile.test  docker-compose.test.yml  run_shellcheck.sh  run_tests.sh  test_assistant.bats  test_backup.bats  test_common.bats  test_compose.bats  test_config.bats  test_disks.bats  test_dispatch.bats  test_helper.bash  test_init.bats  test_network.bats  test_port.bats  test_server_disk.bats  test_server_docker.bats  test_server_firewall.bats  test_server_network.bats  test_server_ssh.bats  test_server_swap.bats  test_server_vpn.bats  test_services.bats  test_status.bats  (+1 more)
(+38 files in other folders)
