[project]
name = "homekase-app"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "httpx>=0.28,<1",
    "pyyaml>=6,<7",
    "jinja2>=3,<4",
    "python-multipart>=0.0,<1",
]

[tool.ruff]
target-version = "py313"
line-length = 100
